fix: removed .cve scroll overflow

--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -63,9 +63,6 @@
 .filters {
   margin-bottom: 1em;
 }
-.cve {
-  overflow: scroll;
-}
 
 .cve-table {
   width: 100%;
